...
    <string name="koreatech_email_url">https://email.koreatech.ac.kr/</string>

    <!-- Required value in actionbardrawertoggle -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signup_to_login">이미 계정이 있으신가요? <b> 로그인하기 </b> </string>
    <string name="back_button_pressed">정말 저장하지 않고 나가시겠어요?</string>
    <string name="erase_button_pressed">정말 전체를 지우겠어요?</string>

    <!-- Board -->
    <string name="board_number">글번호</string>
    <string name="board_view_count">조회</string>
    <string name="board_comment_count">댓글수</string>
...
    <string name="forgotpassword_goto_login_button">비밀번호가 기억나시나요? 로그인하기</string>
    <string name="forgotpassword_sent_email_title">KOREATECH E-mail 인증</string>
    <string name="forgotpassword_sent_email_message">학교 메일로 비밀번호 초기화를 완료해 주세요. 이동하실래요?</string>

    <!--lost and found-->
    <string name="navigation_item_lost_and_found">분실물</string>
    <string name="lost_and_found_created">생성되었습니다.</string>
    <string name="lost_and_found_edited">수정되었습니다.</string>
    <string name="lost_and_found_deleted">삭제되었습니다.</string>
    <string name="lost_and_found_delete_fail">삭제에 실패했습니다.</string>

    <!--major-->
    <string name="major_title">학부</string>
    <string name="major_architectural_engineering">건축공학부</string>
    <string name="major_employment_service_policy">고용서비스정책학과</string>
...
