...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">


    <in.koreatech.koin.core.appbar.AppBarBase
        android:id="@+id/koin_base_app_bar_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftButtonBackground="@drawable/ic_back_arrow"
        app:rightButtonBackground="@drawable/ic_create"
        app:titleText="분실물게시판" />

...
                    android:layout_marginTop="14.5dp"
                    android:background="@color/divider"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/lostfound_comment_writer" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lostfound_comment_content_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="22.5dp"
                    android:layout_marginEnd="16dp"
                    android:lineSpacingExtra="10sp"
...
                        android:layout_height="63dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="12dp">

                        <EditText
                            android:id="@+id/lostfound_comment_content_edittext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="댓글을 작성해주세요"
                            android:letterSpacing="-0.05"
                            android:lineSpacingExtra="10sp"
...
                    android:layout_marginBottom="24.3dp"
                    android:weightSum="2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <Button
                        android:id="@+id/lostfound_comment_cancel_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_gray9_rectangle"
                        android:text="취소"
                        app:fontName="Normal" />

                    <Button
                        android:id="@+id/lostfound_comment_register_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_gray9_rectangle"
                        android:text="등록"
...
