...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="2019.03.03 17:10" />


        <Button
            android:id="@+id/lostfound_comment_remove"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_close"
...
            android:layout_marginTop="4dp"
            android:letterSpacing="-0.05"
            android:lineSpacingExtra="6sp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/lostfound_comment_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lostfound_comment_writer"
            tools:text="헐.. 복지관 서점에 있는데 바보.." />

        <Button
            android:id="@+id/lostfound_comment_edit"
...
