<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <in.koreatech.koin.core.appbar.AppBarBase
        android:id="@+id/koin_base_app_bar_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftButtonBackground="@drawable/ic_back_arrow"
        app:rightButtonBackground="@drawable/ic_create"
        app:titleText="분실물게시판" />

    <in.koreatech.koin.core.swiperefreshbottom.SwipeRefreshLayoutBottom
        android:id="@+id/lostfound_main_swiperefreshlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="56dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lostfound_main_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="56dp"
            android:background="@android:color/white" />

    </in.koreatech.koin.core.swiperefreshbottom.SwipeRefreshLayoutBottom>

</FrameLayout>